--- a/index.html
+++ b/index.html
@@ -200,7 +200,10 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+	    <a class="coinbase-button" 
+		data-button-style="custom_large"
+		data-button-text="Preorder with Bitcoin"
+		data-code="8521d7cad963e39617a6520f85b7fa5c" href="https://coinbase.com/checkouts/8521d7cad963e39617a6520f85b7fa5c">Preorder With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
 	  </div>
 	  <div class="row-fluid">
